# handy-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  cursed-spider.safetensors  cursed-spider.safetensors.old
.github/workflows/: continuous_deployment.yml
cli/: Cargo.toml
cli/src/: generate_helpers.rs  i_model.rs  lib.rs  main.rs  nn_model.rs  parsers.rs  paths.rs  pile_randomizers.rs  run_a_star.rs  training_utils.rs
cli/src/example_generator/: bucket_depth.rs  full_a_star.rs
cli/src/old/: warrior_demon.rs
cli_lib/: Cargo.toml
cli_lib/src/: lib.rs
clib/: Cargo.toml
clib/src/: lib.rs
data/models/: .gitignore  Assassin.Demon.yaml  Assassin.Flora.yaml  Assassin.Ogre.yaml  Assassin.Ooze.yaml  Assassin.Spider.yaml  Assassin.Troupe.yaml  Assassin.Vampire.yaml  Assassin.Wall.yaml  Beastmaster.Demon.yaml  Beastmaster.Flora.yaml  Beastmaster.Ogre.yaml  Beastmaster.Ooze.yaml  Beastmaster.Spider.yaml  Beastmaster.Troupe.yaml  Beastmaster.Vampire.yaml  Beastmaster.Wall.yaml  Cursed.Demon.yaml  Cursed.Flora.yaml  Cursed.Ogre.yaml  Cursed.Ooze.yaml  Cursed.Spider.yaml  Cursed.Troupe.yaml  Cursed.Vampire.yaml  Cursed.Wall.yaml  Huntress.Demon.yaml  Huntress.Flora.yaml  Huntress.Ogre.yaml  Huntress.Ooze.yaml  Huntress.Spider.yaml  Huntress.Troupe.yaml  Huntress.Vampire.yaml  Huntress.Wall.yaml  Monk.Demon.yaml  Monk.Flora.yaml  Monk.Ogre.yaml  Monk.Ooze.yaml  Monk.Spider.yaml  Monk.Troupe.yaml  Monk.Vampire.yaml  (+26 more)
handy_core/: Cargo.toml
handy_core/src/: arg_parse.rs  card_defs.rs  game.rs  game_state.rs  game_utils.rs  interface_utils.rs  lib.rs  pile_utils.rs  solver.rs  types.rs  utils.rs
handy_core/src/game/: card_defs.rs  card_modifiers.rs  card_ptr.rs  end_game.rs  game_state.rs  logic.rs  pile_modifiers.rs  pile_utils.rs  piper_helpers.rs  primitives.rs
handy_core/src/game/card_ptr/: card_ptr_as_id.rs  card_ptr_as_ref.rs
handy_core/src/solver/: a_star.rs  ida.rs  model.rs  model_t.rs  pile_mapping.rs  tiny_pile.rs  vectorize.rs
handy_core/src/utils/: interaction_utils.rs  pile_utils.rs  printing_utils.rs  string_utils.rs
learning/: Cargo.toml
py/: render_charts.py
pytrain/: main.py  requirements.txt
solver/: Cargo.toml
solver/src/: main.rs
vectorize_derive/: Cargo.toml
vectorize_derive/src/: lib.rs
web_ui/: Cargo.toml  Trunk.toml.todo  build_service_worker_file.sh  index.html  manifest.json  style.css
web_ui/src/: class_helpers.rs  colours.rs  components.rs  constants.rs  contexts.rs  game_card.rs  game_player.rs  game_player_state.rs  game_player_types.rs  init_pile_provider.rs  key_manager.rs  lib.rs  menu_screen.rs  oracle_panel.rs  panels.rs  screens.rs  solver.rs  types.rs  versioning.rs  worker_stuff.txt
web_ui/src/components/: action_icon_badge.rs  action_icon_specs.rs  button.rs  card_id_pill.rs  event_span.rs  game_card.rs  icon_badge.rs  icon_utils.rs  index_badge.rs  pile_span.rs  token_span.rs  utils.rs
web_ui/src/contexts/: is_playing.rs  options.rs  placer.rs  single_hover.rs
web_ui/src/panels/: card_sides_panel.rs
web_ui/src/screens/: helper_screen.rs  history_panel.rs
web_ui/static/: styles.css
