[workspace]
members = [
    "handy_core",
    "cli",
    "web_ui",
    "learning",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
regex = "1.9.1"
enum-map = "2.6.0"
rand = "0.8.5"
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
serde-jsonlines = "0.4.0"
serde_yaml = "0.9"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
itertools = "0.11.0"
arrayvec = "0.7.4"
priq = "0.2.0"
strum = "0.25"
strum_macros = "0.25"
text_io = "0.1.12"
colored = "2.0.4"
queues = "1.0.2"
bitflags = "2.3.3"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
syn = "1.0"
quote = "1.0"
