[package]
name = "handy_c_lib"
version = "0.1.0"
edition = "2021"

[lib]
name="handy_c_lib"
path="src/lib.rs"
crate-type = ["dylib"]

# [lib]
# name = "handy_c_lib"

[dependencies]
handy_core = { path = "../handy_core" }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
