[package]
name = "handy_core"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true

[dependencies]
vectorize_derive = { path = "../vectorize_derive" }
strum = {workspace=true}
strum_macros = {workspace=true}
text_io = {workspace=true}
colored = {workspace=true}
queues ={workspace=true}
bitflags = {workspace=true}
lazy_static = {workspace=true}
pretty_assertions = {workspace=true}
regex = { workspace = true }
enum-map = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
syn = {workspace=true}
quote = {workspace=true}
arrayvec = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
priq = { workspace = true }
# jemallocator = "0.5"
# jemalloc-sys = {version = "0.5", features = ["stats"]}
# libc = "0.2"
