[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
handy_core = { path = "../handy_core" }
reqwasm = "0.5.0"
serde = {workspace=true}
serde_yaml = { workspace = true }
leptos = { version = "0.4.3", features = ["csr"] }
leptos_animation = "0.2.0"
gloo = {version = "0.10.0", features = ["futures"] }
futures = "0.3.25"
console_error_panic_hook = "0.1.7"
lazy_static = {workspace=true}
rand = { version = "0.8.5", features = ["std", "std_rng"] }
leptos-use = "0.6.3"
glam = "0.24.2"
closure = "0.3.0"
url = "2.4.1"
colors-transform = "0.2.11"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]
